--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="mbr-contacts row">
             <div class="col-sm-8">
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-6" style="direction:ltr">
                         <p></p><p><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>ارتباط با ما</strong></span></font><br>
 Email: rasouli.ali@hotmail.com, ali.r.programmer@gmail.com<br>
 Phone: +98 912 743 3108</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;+98 921 203 6325<br><br><br></p><p></p>
