--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="mbr-author card-footer">
                             <div class="mbr-author-img"><img src="assets/images/khodam2-143x160-73.jpg" class="img-circle"></div>
                             <div class="mbr-author-name"><span style="font-weight: normal;">علی رسولی</span></div>
-                            <small class="mbr-author-desc">توسعه دهنده ارشد</small>
+                            <small class="mbr-author-desc">توسعه دهنده ارشد وب و اپلیکشن های کاربری</small>
                         </div>
                     </div>
 
@@ -165,6 +165,8 @@
                 </div>
             </div>
         </div>
+      </div>
+    <div class="mbr-cards-row row striped">
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
@@ -204,6 +206,8 @@
                 </div>
             </div>
         </div>
+      </div>
+    <div class="mbr-cards-row row striped">
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
@@ -231,6 +235,21 @@
                 </div>
             </div>
         </div>
+        <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
+            <div class="container">
+                <div class="card cart-block">
+                    <div class="card-img"><img src="assets/images/table.jpg" class="card-img-top"></div>
+                    <div class="card-block">
+                        <h4 class="card-title">سامانه بازیابی اطلاعات</h4>
+                        <h5 class="card-subtitle">1399 - 1399</h5>
+                        <p class="card-text">در این سامانه می توانید هر یک از سایت های مورد نیاز یا قسمتی از آنها فیلتر نمایید تا آن اطلاعات به آدرس ایمیل شما ارسال گردد تا حتی بعدها اطلاعات آن سایت ها را بصورت بایگانی همیشگی داشته باشید </p>
+                        <div class="card-btn"><a href="#" class="btn btn-primary">بزودی</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+    <div class="mbr-cards-row row striped">
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
@@ -431,14 +450,22 @@
     
     <div class="container">
         <div class="mbr-contacts row">
-            <div class="col-sm-8">
+            <div class="col-sm-12">
                 <div class="row">
                     <div class="col-sm-6" style="direction:ltr">
                         <p></p><p><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>ارتباط با ما</strong></span></font><br>
 Email: rasouli.ali@hotmail.com, ali.r.programmer@gmail.com<br>
-Phone: +98 912 743 3108</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;+98 921 203 6325<br><br><br></p><p></p>
+Phone: <a href="tel:+989127433108">+989127433108</a></p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="tel:+989011454747">+989011454747</a><br><br><br></p><p></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>لینکهای ارتباطی</strong></span></font></p><ul class="mbr-contacts__list"><li><a href="http://www.norc91.ir/" target="_blank">آزمایشگاه نورس</a><a class="text-white" href="https://mobirise.com/"></a></li><li><a href="http://www.ahdart.ir" target="_blank">عهد آرت</a><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip"></a></li><li><a href="http://www.rasouliali.wixsite.com/home">صفحه شخصی علی رسولی</a><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip"></a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text">
+                      <font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;">
+                        <strong>لینکهای مرتبط</strong></span></font></p><ul class="mbr-contacts__list">
+                      <li><a href="https://hampisheh.com/" target="_blank">همپیشه</a></li>
+                      <li><a href="http://boursbin.ir/">بورس بین</a></li>
+                      <li><a href="http://app.khodkaaar.ir/">خودکار</a></li>
+                      <li><a href="http://sangeiranara.ir/">سنگ ایران آرا</a></li>
+                      <li><a href="http://pardisluxuryrent.com/">پردیس</a></li>
+                      </ul></div>
                 </div>
             </div>
             <!--<div class="col-sm-4" data-form-type="formoid">
@@ -470,7 +497,7 @@ Phone: +98 912 743 3108</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;+98 9
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
+        <p class="text-xs-center">Copyright (c) 2021 Mobirise.</p>
     </div>
 </footer>
 
