--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="./index.html">خانه</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="./assets/MyCV.pdf">دانلود سند کامل رزومه</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item">
+                      <a class="nav-link link" href="./index.html">خانه</a></li><li class="nav-item nav-btn">
+                      <a class="nav-link btn btn-white btn-white-outline" href="./assets/MyCV.pdf">دانلود سند کامل رزومه</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -75,7 +77,8 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy web site building software download</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials2-3" style="background-image: url(assets/images/2-2000x1125-57.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy web site building software download</a></section>
+  <section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials2-3" style="background-image: url(assets/images/2-2000x1125-57.png); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -104,7 +107,7 @@
                           با فرهنگ و استانداردهای مختلف را دارم. هر کدام از این شرکت‎ها انواع مختلف مشتریان دولتی یا خصوصی را داشتند
                           . نیازها و مشکلات و راهکارهای هرکدام باعث تجربه مفید و موثری در رشد و تولید هرچه بهتر برنامه های آتی شده است.</div></div>
                         <div class="mbr-author card-footer">
-                            <div class="mbr-author-img"><img src="assets/images/khodam2-143x160-73.jpg" class="img-circle"></div>
+                            <div class="mbr-author-img"><img src="assets/images/alirasouli.jpg" class="img-circle"></div>
                             <div class="mbr-author-name"><span style="font-weight: normal;">علی رسولی</span></div>
                             <small class="mbr-author-desc">توسعه دهنده ارشد وب و اپلیکشن های کاربری</small>
                         </div>
@@ -146,7 +149,7 @@
                         <h4 class="card-title">سامانه همپیشه</h4>
                         <h5 class="card-subtitle">1398 - 1399</h5>
                         <p class="card-text">سامانه ای جهت بازاریابی شبکه ای در حوزه بیمه و خدمات اپراتور ها است که در آن هم بصورت B2C و هم بصورت B2B می توان همکاری نمود .
-                      این سامانه بصورت BPMS طراحی شده است و در آن می توان وب سرویس ها و فرم ها را بدون ارتباط با زبان سی شارپ به سامانه متصل نمود</p>
+                      این سامانه بصورت BPMS طراحی شده است و در آن می توان وب سرویس ها و فرم ها را بدون کدنویسی با زبان سی شارپ به سامانه متصل نمود</p>
                         <div class="card-btn"><a href="https://hampisheh.com" class="btn btn-primary">مشاهده سایت</a></div>
                     </div>
                 </div>
