--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                     <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item">
                       <a class="nav-link link" href="./index.html">خانه</a></li><li class="nav-item nav-btn">
-                      <a class="nav-link btn btn-white btn-white-outline" href="./assets/MyCV.pdf">دانلود سند کامل رزومه</a></li></ul>
+                      <a class="nav-link btn btn-white btn-white-outline" href="./assets/Ali rasouli CV.pdf">دانلود سند کامل رزومه</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
